syntax = "proto3";

option go_package = "kueue/kueue/proto";

service ControllerService {
  rpc GetTopic (ProducerTopicRequest) returns (ProducerTopicResponse); // used by producer
  rpc RegisterBroker (RegisterBrokerRequest) returns (RegisterBrokerResponse); // used by broker
  rpc Subscribe (SubscribeRequest) returns (SubscribeResponse); // used by consumer
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse); // used by broker
}

// num_partitions and replication_factor are optional when getting an existing topic
message ProducerTopicRequest {
  string topic_name = 1;
  optional int32 num_partitions = 2;
  optional int32 replication_factor = 3;
}

// Controller returns the leader broker info to producer
message ProducerTopicResponse {
  string topic_name = 1;
  repeated PartitionInfo partitions = 2;
}

// When only returning leader, leave replicas empty
message PartitionInfo {
  int32 partition_id = 1;
  BrokerInfo leader = 2;
  repeated BrokerInfo replicas = 3;
}

message BrokerInfo {
  string broker_id = 1;
  string addr = 2;
}

message SubscribeRequest {
  string topic_name = 1;
  string consumer_id = 2;
}

// Controller returns all broker info, leader and replicas, to consumer
message SubscribeResponse {
  string topic_name = 1;
  PartitionInfo partition = 2;
}

message HeartbeatRequest {
  string broker_id = 1;
}

message HeartbeatResponse {}

message RegisterBrokerRequest {
  string broker_id = 1;
  string broker_address = 2;
}

message RegisterBrokerResponse {}
